# AttemptTwoPractioner

./: .coverage  .gitignore  App.tsx  BACKEND_ENHANCEMENTS.md  CHANGES.md  MCP_BACKEND_COMPLETION_CHECKLIST.md  README.md  TASKS_CHECKLIST.md  constants.tsx  coverage.xml  icons.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_tests.ps1  run_tests.py  setup.py  tailwind.config.js  test_import_structure.py  test_minimal.py  test_root.py  test_runner.py  tox.ini  tracked_files.txt  tsconfig.json  types.ts  vite.build.config.ts  vite.config.ts
alembic/: env.py
backend/: README.md
contexts/: AuthContext.tsx  ComponentContext.tsx
docs/: API.md  ARCHITECTURE.md  BACKEND_RECOVERY_CHECKLIST.md  CODE_REVIEW_SUMMARY.md  COMPONENT_ARCHITECTURE.md  DEVELOPER_GUIDE.md  DEVLOG.md  DOCUMENTATION_STRUCTURE.md  IMPLEMENTATION_CHECKLISTS.md  IMPLEMENTATION_MASTER_CHECKLIST.md  IMPLEMENTATION_TASK_LIST.md  PHASE_2_CORE_FUNCTIONALITY_CHECKLIST.md  RECOVERY_CHECKLIST.md  TESTING.md  USER_GUIDE.md  action_logging.md  api_key_management.md  api_reference.md  development_setup_summary.md  entity_routes.md  error_handling.md  frontend_phase2_plan.md  instructions.md  performance_monitoring.md  streaming_and_realtime_updates.md
mcp_project_backend/: .env  CHANGES.md  README.md  TODO_BACKEND_IMPLEMENTATION.md  alembic.ini  devlog.md  requirements.txt  setup.py  test_import.py
mcp_project_frontend/: .eslintrc.json  .gitignore  App.tsx  CHANGES.md  README.md  TASKS_CHECKLIST.md  constants.tsx  devlog.md  icons.tsx  (+8 more)
(+504 files in other folders)
