[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp"
version = "0.1.0"
description = "MCP Project Backend"
requires-python = ">=3.10"

[project.authors]
name = "Your Name"
email = "your.email@example.com"

[project.dependencies]
fastapi = ">=0.100.0"
uvicorn = ">=0.27.0"
sqlalchemy = ">=2.0.25"
psycopg2-binary = ">=2.9.9"
pydantic = ">=2.5.3"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
python-multipart = ">=0.0.6"
prometheus-client = ">=0.19.0"
psutil = ">=5.9.8"
alembic = ">=1.13.1"
redis = ">=5.0.1"
python-dotenv = ">=1.0.0"
pydantic-settings = ">=2.1.0"
httpx = ">=0.26.0"
aiohttp = ">=3.9.1"
aiofiles = ">=23.2.1"

[tool.hatch.build.targets.wheel]
packages = ["mcp"]

[tool.hatch.envs.default]
dependencies = ["pytest"]

[tool.hatch.envs.test]
dependencies = ["pytest-asyncio", "pytest-cov", "pytest-mock", "pytest-xdist"]

[tool.hatch.envs.lint]
dependencies = ["black", "isort", "flake8", "mypy"]
